<resources>
    <string name="app_name">Email Agenda</string>
    <string name="google">Google</string>
    <string name="preferences_file">fes.aragon.email_agenda.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">1082930911070-adi463e59v4763j0avrp5931q8cg6403.apps.googleusercontent.com</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="credenciales">Credenciales</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="agregar_contacto">Agregar Contacto</string>
    <string name="ver_contactos">Ver Contactos</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="guardar">Guardar</string>
    <string name="numero">Número</string>
    <string name="contactos">Contactos</string>
</resources>