<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContactoActivity">

    <TextView
        android:id="@+id/nombreContacto"
        android:inputType="textPersonName"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:padding="20dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits" />


    <TextView
        android:id="@+id/correoContacto"
        android:inputType="textEmailAddress"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreContacto"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/numeroContacto"
        android:inputType="textEmailAddress"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="Número"
        android:padding="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correoContacto"
        tools:ignore="TextViewEdits" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/agregarContactoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="58dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>