<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones">

    <TextView
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/provedor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"/>

   <com.google.android.material.button.MaterialButton
       android:id="@+id/agregarBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="356dp"
       android:text="@string/agregar_contacto"
       app:layout_constraintEnd_toEndOf="parent"
       app:flow_horizontalBias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/provedor"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verContactosBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_contactos"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agregarBtn"
        app:layout_constraintBottom_toTopOf="@id/closeSesion"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verContactosBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>